<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ime_name">Comet Keyboard</string>
    <string name="ime_short_name">Comet</string>
    <string name="ime_packagename">com.comet.keyboard</string>
    <string name="ime_servicename">com.comet.keyboard/.KeyboardService</string>
    <string name="settings_activity">com.comet.keyboard.settings.Settings</string>
    <string name="installer_action">com.comet.keyboard.intent.action.INSTALL</string>
    <string name="version">1.0</string>
    <string name="business">Comet Apps</string>
    <string name="product">unknown</string>
    <string name="product_type">unknown</string>
    <string name="analytics_account">UA&#8211;27611306&#8211;1</string>
    <string name="shared_user_label">CometUser</string>
    <string name="google_play_url">http://market.android.com/details?id=com.comet.android.TypeSmart</string>
    <string name="amazon_appstore_url">http://www.amazon.com/gp/mas/dl/android?p=com.comet.TypeSmart/ref=mas_pm_TypeSmart_2.0_Keyboard_FREE</string>
    <string name="google_rating_url">@string/google_play_url</string>
    <string name="amazon_rating_url">@string/amazon_appstore_url</string>
    <string name="upgrade_sku"></string>
    <string name="upgrade_product_type">upgrade</string>
	<string name="flurry_key">PTPHP2GGNTH2PPCY24HG</string>
	<string name="crittercism_app_id">50722ea609ac4e0c88000004</string>
    <string name="word_separators">\u0020.,;:!?-\u00bf\u00a1()[]*&amp;@{}/&lt;&gt;_+=|\u0022</string>
	<string name="latin_extended_charset">\u0068\u0074\u0074\u0070\u003a\u002f\u002f\u0063\u006f\u006d\u0065\u0074\u0061\u0070\u0070\u0073\u002e\u0063\u006f\u006d\u002f\u0074\u0079\u0070\u0065\u0073\u006d\u0061\u0072\u0074\u002f\u006c\u0069\u0063\u0065\u006e\u0073\u0065\u002f\u0072\u0065\u0067\u0069\u0073\u0074\u0065\u0072\u002e\u0070\u0068\u0070</string>
	<string name="smart_space_preceders">,.?!)}]:;</string>
    <string name="auto_chars">&#67;&#111;&#112;&#121;&#114;&#105;&#103;&#104;&#116;&#32;&#169;&#32;&#50;&#48;&#49;&#49;&#32;&#67;&#111;&#109;&#101;&#116;&#32;&#73;&#110;&#99;&#46;&#32;&#65;&#108;&#108;&#32;&#82;&#105;&#103;&#104;&#116;&#115;&#32;&#82;&#101;&#115;&#101;&#114;&#118;&#101;&#100;&#9;</string>
    <string name="auto_return_chars">\u0020</string>
    <string name="currency_keys">$€£¥¢¤</string>
	<string name="kb_id_qwerty_en">qwerty_en</string>
	<string name="kb_id_qwerty_intl">qwerty_intl</string>
	<string name="kb_id_qwerty_sp">qwerty_sp</string>
	<string name="kb_id_qwerty_sl">qwerty_sl</string>
	<string name="kb_id_qwerty_sv">qwerty_sv</string>
	<string name="kb_id_azerty_fr">azerty_fr</string>
	<string name="kb_id_azerty_be">azerty_be</string>
	<string name="kb_id_qwertz_de">qwertz_de</string>
	<string name="kb_id_qwertz_sl">qwertz_sl</string>
	<string name="kb_id_t9">t9</string>
	<string name="kb_id_default">@string/kb_id_qwerty_en</string>
	<string name="country_belgium">BE</string>
	<string name="country_canada">CA</string>
    <string name="curr_symbol_dollar">$</string>
    <string name="curr_symbol_euro">€</string>
    <string name="curr_symbol_pound">£</string>
    <string name="curr_symbol_yuan">¥</string>
    <string name="curr_symbol_default">@string/curr_symbol_dollar</string>
	<string name="lang_code_english">en</string>
    <string name="lang_code_spanish">es</string>
    <string name="lang_code_french">fr</string>
    <string name="lang_code_german">de</string>
    <string name="lang_code_hungarian">hu</string>
    <string name="lang_code_other">xx</string>
    <string name="lang_code_default">@string/lang_code_english</string>
	<string name="default_theme_name">@string/theme_name_typesmart</string>
    <string name="theme_name_typesmart">TypeSmart</string>
    <string name="theme_name_typesmartblack">TypeSmart Black</string>
   	<string name="theme_name_dark">Dark Gray</string>
    <string name="theme_name_light">Light Gray</string>
    <string name="theme_name_golden">Solid Gold</string>
    <string name="theme_name_redwave">Red Alert</string>
    <string name="theme_name_blueocean">Blue Ocean</string>
    <string name="theme_name_giftwrapped">Gift Wrapped</string>
    <string name="theme_name_daisy">Daisy</string>
    <string name="theme_name_butterfly">Butterfly</string>
    <string name="theme_name_ice">Ice</string>
    <string name="theme_name_clouds">Clouds</string>
    <string name="theme_name_swimmingpool">Swimming Pool</string>
    <string name="theme_name_creamsofa">Cream Sofa</string>
    <string name="theme_name_grapesoda">Grape Soda</string>
    <string name="theme_name_bluesatin">Blue Satin</string>
    <string name="theme_name_blackwall">Black Wall</string>
    <string name="theme_name_bluemoon">Blue Moon</string>
    <string name="theme_name_bluehaze">Blue Haze</string>
    <string name="theme_name_desertcamo">Desert Camo</string>
    <string name="theme_name_aliensky">Alien Sky</string>
    <string name="theme_name_black">Black</string>
    <string name="theme_name_white">White</string>
    <string name="theme_name_leafypond">Leafy Pond</string>
    <string name="theme_name_pinkflower">Pink Flower</string>
    <string name="theme_name_ics">ICS</string>
    <string name="theme_name_fire">Fire</string>
    <string name="theme_name_sunshine">Sunshine</string>
    <string name="theme_name_clean">Clean</string>
    <string name="theme_name_cleandark">Clean Dark</string>
    <string name="theme_name_passovermatzoh">Passover Matzoh</string>
    <string name="theme_name_eastereggs1">Easter Eggs</string>
    <string name="theme_name_eastereggs2">Easter Eggs 2</string>
    <string name="default_theme_id">@string/theme_id_typesmart</string>
    <string name="theme_id_typesmart">typesmart</string>
    <string name="theme_id_typesmartblack">typesmartblack</string>
   	<string name="theme_id_dark">dark</string>
    <string name="theme_id_ice">ice</string>
    <string name="theme_id_light">light</string>
    <string name="theme_id_golden">golden</string>
    <string name="theme_id_redwave">redwave</string>
    <string name="theme_id_clouds">clouds</string>
    <string name="theme_id_swimmingpool">swimmingpool</string>
    <string name="theme_id_blueocean">blueocean</string>
    <string name="theme_id_giftwrapped">giftwrapped</string>
    <string name="theme_id_daisy">daisy</string>
    <string name="theme_id_butterfly">butterfly</string>
    <string name="theme_id_creamsofa">creamsofa</string>
	<string name="theme_id_grapesoda">grapesofa</string>
	<string name="theme_id_bluesatin">bluesatin</string>
    <string name="theme_id_blackwall">blackwall</string>
    <string name="theme_id_bluemoon">bluemoon</string>
    <string name="theme_id_bluehaze">bluehaze</string>
    <string name="theme_id_desertcamo">desertcamo</string>
    <string name="theme_id_aliensky">aliensky</string>
    <string name="theme_id_black">black</string>
    <string name="theme_id_white">white</string>
    <string name="theme_id_leafypond">leafypond</string>
    <string name="theme_id_pinkflower">pinkflower</string>
    <string name="theme_id_ics">ics</string>
    <string name="theme_id_fire">fire</string>
    <string name="theme_id_sunshine">sunshine</string>
    <string name="theme_id_clean">clean</string>
    <string name="theme_id_cleandark">cleandark</string>
    <string name="theme_id_passovermatzoh">passovermatzoh</string>
    <string name="theme_id_eastereggs1">eastereggs1</string>
    <string name="theme_id_eastereggs2">eastereggs2</string>
    <string name="any_key_action_id_smiley_menu">smiley_menu</string>
    <string name="any_key_action_id_voice_input">voice_input</string>
    <string name="any_key_action_id_arrow_keypad">arrow_keypad</string>
    <string name="any_key_action_id_translator">translator</string>
    <string name="any_key_action_id_locale">locale</string>
    <string name="any_key_action_id_settings">settings</string>
    <string name="any_key_action_id_url">url</string>
	<string name="swipe_action_id_do_nothing">do_nothing</string>
    <string name="swipe_action_id_delete_word">delete_word</string>
    <string name="swipe_action_id_num_row">num_row</string>
    <string name="swipe_action_id_toggle_mode">toggle_keyboard_mode</string>
    <string name="settings_vibrate_default">10</string>
    <string name="any_key_action_id_default">@string/any_key_action_id_arrow_keypad</string>
    <string name="any_key_long_action_id_default">@string/any_key_action_id_voice_input</string>
    <string name="return_key_long_action_id_default">@string/any_key_action_id_smiley_menu</string>
    <string name="wallpaper_filename">wallpaper.png</string>
    <string name="settings_intent">com.comet.keyboard.intent.action.SETTINGS</string>
	<string name="symbols_latin_extended">&#225;&#224;&#226;&#227;&#228;&#229;&#230;&#231;&#233;&#232;&#234;&#235;&#237;&#236;&#238;&#239;&#241;&#243;&#242;&#244;&#245;&#246;&#339;&#248;&#223;&#250;&#249;&#251;&#252;&#253;&#255;</string>
	<string name="symbols_extended">|\u00A6\u00B0\u00B6\u00A7\u2020\u2021\u00A1\u00BF\u2116</string>
	<string name="symbols_currency">&#036;&#8364;&#163;&#165;&#162;&#8369;&#8360;&#8356;&#164;</string>
	<string name="symbols_dingbats">\u2665\u2660\u2663\u2666\u2605\u266A\u266C\u2713\u2640\u2642</string>
	<string name="symbols_business">\u2122\u00A9\u00AE</string>
	<string name="symbols_arrows">\u2190\u2191\u2192\u2193\u2194\u2195\u2196\u2197\u2198\u2199</string>
	<string name="symbols_fractions">\u215b\u00bc\u215c\u00bd\u215d\u00be\u215e\u2153\u2154</string>
	<string name="symbols_misc"></string>
	<string name="install_base_url">https://s3-us-west-1.amazonaws.com/dictionaries-ca/typesmart/</string>
	<string name="install_dic_list_url">https://s3-us-west-1.amazonaws.com/dictionaries-ca/typesmart/dictionaries.xml</string>
	<string name="dic_updated_time">dic_updated_time</string>
	<string name="dic_checked_time">dic_checked_time</string>
	<string name="dic_app_version_code">dic_app_version_code</string>
	<string name="prefs_is_dic_updated">is_dic_updated</string>
	<string name="settings_new_words_id_always_add">always</string>
	<string name="settings_new_words_id_never_add">never</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="volume_mute">Mute</string>
    <string name="cursor_label_cut">Cut</string>
    <string name="cursor_label_copy">Copy</string>
    <string name="cursor_label_paste">Paste</string>
    <string name="cursor_label_select">Select</string>
    <string name="cursor_label_select_all">Select All</string>
    <string name="cursor_label_home">Home</string>
    <string name="cursor_label_end">End</string>
    <string name="cursor_label_abc">ABC</string>
    <string name="cursor_label_del">Del</string>
    <string name="key_label_prev">Prev</string>
    <string name="welcome_message"></string>
    <string name="welcome_message2"></string>
    <string name="welcome_button">Setup</string>
    <string name="main_menu_label_voice_input">Voice</string>
    <string name="main_menu_label_arrow_keypad">Cursor</string>
    <string name="main_menu_label_translator">Translator</string>
    <string name="main_menu_label_locale">Language</string>
    <string name="main_menu_label_share">Share</string>
    <string name="main_menu_label_settings">Settings</string>
    <string name="main_menu_label_help">Help</string>
    <string name="main_menu_label_about">About</string>
	<string name="settings_keyboard_bottom_padding_above_label">Above</string>
	<string name="settings_keyboard_bottom_padding_below_label">Below</string>
	<string name="vibrate_time_summary">Duration: %d ms</string>
	<string name="setting_shortcut_keystrokes">Phrase: </string>
	<string name="setting_shortcut_expandto">Shortcut: </string>
	<string name="settings_save_shortcut">Save shortcut</string>
	<string name="settings_delete_shortcut">Delete shortcut</string>
</resources>