<?xml version="1.0" encoding="UTF-8"?>
<Keyboard
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:keyWidth="20%p"
	android:keyHeight="@dimen/key_height"
	android:horizontalGap="0px"
	android:verticalGap="0px">
	<Row
		android:rowEdgeFlags="top">
		<Key
			android:codes="@integer/keycode_cut"
			android:keyWidth="15%p"
			android:keyLabel="@string/cursor_label_cut"
			/>
		<Key
			android:codes="@integer/keycode_copy"
			android:keyWidth="17.5%p"
			android:keyLabel="@string/cursor_label_copy"
			/>
		<Key
			android:codes="@integer/keycode_paste"
			android:keyWidth="20%p"
			android:keyLabel="@string/cursor_label_paste"
			/>
		<Key
			android:codes="@integer/keycode_select"
			android:keyWidth="20%p"
			android:keyLabel="@string/cursor_label_select"
			/>
		<Key
			android:codes="@integer/keycode_select_all"
			android:keyWidth="27.5%p"
			android:keyLabel="@string/cursor_label_select_all"
			/>
	</Row>
	<Row>
		<Key
			android:codes="@integer/keycode_arrow_home"
			android:keyEdgeFlags="left"
			android:keyLabel="@string/cursor_label_home"	
			/>
		<Key
			android:codes="@integer/keycode_arrow_up"
			android:horizontalGap="20%p"
			android:iconPreview="@drawable/sym_kb_popup_arrow_up"
			android:isRepeatable="true" 
			/>
		<Key
			android:codes="@integer/keycode_arrow_end"
			android:horizontalGap="20%p"
			android:keyLabel="@string/cursor_label_end"
			/>
	</Row>
	<Row>
		<Key
			android:codes="@integer/keycode_arrow_back"
			android:iconPreview="@drawable/sym_kb_popup_arrow_back"
			android:isRepeatable="true" 
			/>
		<Key
			android:codes="@integer/keycode_arrow_left"
			android:iconPreview="@drawable/sym_kb_popup_arrow_left"
			android:isRepeatable="true" 
			/>
		<Key
			android:codes="@integer/keycode_arrow_right"
			android:horizontalGap="20%p"
			android:iconPreview="@drawable/sym_kb_popup_arrow_right"
			android:isRepeatable="true" 
			/>
		<Key
			android:codes="@integer/keycode_arrow_next"
			android:iconPreview="@drawable/sym_kb_popup_arrow_next"
			android:keyEdgeFlags="right" 
			android:isRepeatable="true" 
			/>
	    <Gap> </Gap>
	</Row>
	<Row
		android:rowEdgeFlags="bottom">
        <Key 
        	android:codes="@integer/keycode_mode"  
        	android:keyLabel="@string/cursor_label_abc"
        	/>
		<Key
			android:codes="32" 
			android:iconPreview="@drawable/sym_kb_popup_space"
			android:isRepeatable="true" 
			/>
		<Key
			android:codes="@integer/keycode_arrow_down"
			android:iconPreview="@drawable/sym_kb_popup_arrow_down"
			android:isRepeatable="true" 
			/>
		<Key
			android:codes="@integer/keycode_del_forward"
			android:keyLabel="@string/cursor_label_del"
			android:isRepeatable="true" 
			/>
		<Key
			android:codes="@integer/keycode_delete"
			android:iconPreview="@drawable/sym_kb_popup_delete"
            android:keyEdgeFlags="right"
            android:isRepeatable="true"
            />
	</Row>
</Keyboard>