<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    tools:context=".KeyboardView" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="@drawable/page_background"
        android:orientation="vertical" >

        <!-- Title bar -->

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <!-- Back button -->
            <ImageView
                android:id="@+id/sym_menu_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:clickable="true"
                android:onClick="onClickPopupBack"
                android:src="@drawable/btn_close" />
            
            <!-- Title -->
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/main_menu_title" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2" >

            <!-- TOP ROW -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4" >

                <Button
                    android:id="@+id/btn_voice"
                    style="@style/btn_main_menu"
                    android:drawableTop="@drawable/main_menu_voice"
                    android:onClick="onClickVoiceInput"
                    android:text="@string/main_menu_label_voice_input" />

                <Button
                    android:id="@+id/btn_arrow_keypad"
                    style="@style/btn_main_menu"
                    android:drawableTop="@drawable/main_menu_arrows"
                    android:onClick="onClickArrowKeypad"
                    android:text="@string/main_menu_label_arrow_keypad" />

                <Button
                    android:id="@+id/btn_translator"
                    style="@style/btn_main_menu"
                    android:drawableTop="@drawable/main_menu_translator"
                    android:onClick="onClickTranslator"
                    android:text="@string/main_menu_label_translator" />

                <Button
                    android:id="@+id/btn_profile"
                    style="@style/btn_main_menu"
                    android:drawableTop="@drawable/main_menu_locale"
                    android:onClick="onClickLocale"
                    android:text="@string/main_menu_label_locale" />
            </LinearLayout>

            <!-- BOTTOM ROW -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4" >

                <Button
                    android:id="@+id/btn_settings"
                    style="@style/btn_main_menu"
                    android:drawableTop="@drawable/main_menu_settings"
                    android:onClick="onClickSettings"
                    android:text="@string/main_menu_label_settings" />

                <Button
                    android:id="@+id/btn_share"
                    style="@style/btn_main_menu"
                    android:drawableTop="@drawable/main_menu_share"
                    android:onClick="onClickShare"
                    android:text="@string/main_menu_label_share" />

                <Button
                    android:id="@+id/btn_help"
                    style="@style/btn_main_menu"
                    android:drawableTop="@drawable/main_menu_help"
                    android:onClick="onClickHelp"
                    android:text="@string/main_menu_label_help" />

                <Button
                    android:id="@+id/btn_about"
                    style="@style/btn_main_menu"
                    android:drawableTop="@drawable/main_menu_about"
                    android:onClick="onClickAbout"
                    android:text="@string/main_menu_label_about" />
                
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>