<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btVolumeDecrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/minus" />

        <SeekBar
            android:id="@+id/sbVolume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:padding="10dp" />

        <Button
            android:id="@+id/btVolumeIncrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/plus" />
    </LinearLayout>

    <Button
        android:id="@+id/btVolumeMute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/volume_mute" />

    <TextView
        android:id="@+id/tvVolumeSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/vibrate_time_summary" />

</LinearLayout>