<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/llSettingKeyboardPaddingBottom"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/etDemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/settings_keyboard_bottom_padding_above_label" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btPaddingBottomAboveDecrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/minus" />

            <SeekBar
                android:id="@+id/sbKeyboardPaddingBottomAbove"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <Button
                android:id="@+id/btPaddingBottomAboveIncrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/plus" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/settings_keyboard_bottom_padding_below_label" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btPaddingBottomBelowDecrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/minus" />

            <SeekBar
                android:id="@+id/sbKeyboardPaddingBottomBelow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <Button
                android:id="@+id/btPaddingBottomBelowIncrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Button
                android:id="@+id/btKeyPaddingBottomHeightCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btKeyPaddingBottomHeightOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok" />
        </LinearLayout>

        <!-- Not default IME -->

        <include layout="@layout/no_default_ime" />
    </LinearLayout>

</ScrollView>