<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/page_background"
    android:fillViewport="true"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="0dp" >

        <!-- TypeSmart logo -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/title_logo" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_bg"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingBottom="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="0px"
                android:text="@string/welcome_message"
                android:textColor="@color/label_text"
                android:textSize="@dimen/welcome_message_1_font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingBottom="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="0px"
                android:text="@string/welcome_message2"
                android:textColor="@color/label_text"
                android:textSize="@dimen/welcome_message_2_font_size" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_welcome_ok"
            style="@style/btn_std"
            android:gravity="center"
            android:onClick="onClickOk"
            android:text="@string/welcome_button"
            android:textColor="@color/label_text" />

	    <!-- Comet logo -->
    	<include layout="@layout/comet_logo" />

        </LinearLayout>
</ScrollView>